--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# http://www.gradle.org/docs/current/userguiprojects. More details, visit
+## http://www.gradle.org/docs/current/userguidde/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
@@ -17,3 +18,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
